--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,25 +3,11 @@
 <head>  
   <meta charset="UTF-8">
   <title>::considrMe::</title>
-  
-  <script src="js/jquery-3.2.1.min.js"></script>
-  
 </head>  
 <body> 
-    <div>HAHAHAHAHAHAHAHA MANIAC LAUGHTER GALORE</div>
-	
-	<script type='text/javascript'>
-		$(document).ready(function() {
+  <header header></header>
+	<main ui-view></main>
+	<footer footer></footer>
 
-			console.log("JQUERY TEST");
-			
-			$.get( "http://www.considr.me/api/Campaigns?access_token=55", function( data ) {
-			  
-			  alert( "Campaigns loaded: " + data.length );
-			});				
-			
-
-		});
-	</script>
-</body>  
+<script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="app.js"></script></body>  
 </html>  
